# proofport-ai

./: .env.example  .gitignore  .release-please-manifest.json  CHANGELOG.md  DOCKER_SETUP.md  Dockerfile  PRIVACY.md  README.md  SETUP_SUMMARY.md  TESTING.md  docker-compose.e2e-payment.yml  docker-compose.test.yml  docker-compose.yml  glama.json  openapi-gpt-actions.yaml  package-lock.json  package.json  release-please-config.json  tsconfig.json  vitest.config.ts
aws/: Caddyfile  Dockerfile.enclave  boot-active-slot.sh  build-enclave.sh  deploy-blue-green.sh  docker-compose.aws.yml  ec2-setup.sh  enclave-entrypoint.sh  enclave-server.py  enclave-server.ts  enclave-vsock-bridge.py  nsm-helper.py  stop-active-slot.sh  verify-ec2-autostart.sh  vsock-bridge.py
docs/: 8004scan-score-analysis.md  a2a-manual-testing-guide.md  a2a-testing-analysis.md  e2e-staging-test-report-2026-02-15.md  e2e-test-report-2026-02-15.md  erc8004-best-practices-gap-analysis.md  integration-guide.md  sdk-migration-test-changes.md
prover/: Cargo.toml  Dockerfile  Dockerfile.enclave
prover/src/: circuit.rs  main.rs  prover.rs  routes.rs  types.rs  verifier.rs  vsock.rs
scripts/: a2a-e2e-test.sh  a2a-test-stop.sh  a2a-test.sh  ai-dev.sh  e2e-test.mjs  request-testnet-usdc.ts  run-e2e.sh  test-all.sh  test-x402-payment.ts
sign-page/: .env.example  Dockerfile  package-lock.json  package.json
src/: index.ts  logger.ts  swagger.ts  tracing.ts
telegram-bot/: .env.example  .gitignore  README.md  bot.mjs  package-lock.json  package.json
tests/: a2a-taskHandler.test.ts  artifactManager.test.ts  (+19 more)
(+148 files in other folders)
