[package]
name = "proofport-prover"
version = "0.1.0"
edition = "2021"

[features]
default = []
enclave = ["vsock", "aws-nitro-enclaves-nsm-api", "base64"]

[dependencies]
noir_rs = { package = "noir", git = "https://github.com/zkmopro/noir-rs", features = [
    "barretenberg",
], branch = "v1.0.0-beta.8-3" }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }
hex = "0.4"
vsock = { version = "0.5", optional = true }
aws-nitro-enclaves-nsm-api = { version = "0.4", optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
axum-test = "16"
